Fixed overlay z-index

--- a/css/_jquery-mdstrap.sass
+++ b/css/_jquery-mdstrap.sass
@@ -13,6 +13,7 @@ $link-bg: white
 	right: 0
 	bottom: 0
 	background-color: rgba(black, 0.4)
+	z-index: 999
 
 .mobile-swipe
 	position: fixed
@@ -33,8 +34,6 @@ $link-bg: white
 .disable-scroll
 	overflow: hidden
 	height: 100%
-
-.navbar-toggler
 
 header
 	nav
