--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ pre {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
 }
 
 .mobile-swipe {
